--- a/Weißer Lotus Desktop Software/MainWindow.xaml
+++ b/Weißer Lotus Desktop Software/MainWindow.xaml
@@ -34,6 +34,7 @@
                 <TextBox Text="{Binding Password}" TextChanged="TextBox_TextChanged"/>
                 <TextBox Text="{Binding Email}" />
                 <Button Command="{Binding RegisterCommand}" Content="Register"/>
+                <Button x:Name="OpenStockFormButton" Click="OpenStockFormButton_Click">Open Stock Form</Button>
             </StackPanel>
 
 
