--- a/Weißer Lotus Desktop Software/MainWindow.xaml
+++ b/Weißer Lotus Desktop Software/MainWindow.xaml
@@ -14,11 +14,12 @@
             <RowDefinition Height="30"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border Background="Black" MouseLeftButtonDown="Border_MouseLeftButtonDown">
+        <Border Background="Black" MouseLeftButtonDown="Border_MouseLeftButtonDown" BorderBrush="White" BorderThickness="1">
             <DockPanel LastChildFill="False">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="Images/Weißer_Lotus_Logo.ico" Width="45" Height="34" RenderTransformOrigin="0.472,1.115"/>
                     <TextBlock Text="Weißer Lotus" Foreground="White" Padding="7" Width="108"/>
+                    <Button Content="Stock Price List" Click="OpenStockFormButton_Click" Background="Black" Foreground="White" BorderBrush="White" BorderThickness="1"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
                     <Button Content="_" Width="30" Click="MinimizeButton_Click" Background="Black" Foreground="White"/>
@@ -34,7 +35,7 @@
                 <TextBox Text="{Binding Password}" TextChanged="TextBox_TextChanged"/>
                 <TextBox Text="{Binding Email}" />
                 <Button Command="{Binding RegisterCommand}" Content="Register"/>
-                <Button x:Name="OpenStockFormButton" Click="OpenStockFormButton_Click">Open Stock Form</Button>
+                
             </StackPanel>
 
 
