--- a/Weißer Lotus Desktop Software/Amortisationsdauer.xaml
+++ b/Weißer Lotus Desktop Software/Amortisationsdauer.xaml
@@ -1,36 +1,13 @@
-﻿<Window x:Class="Weißer_Lotus_Desktop_Software.Amortisationsdauer"
+﻿<Page x:Class="Weißer_Lotus_Desktop_Software.Amortisationsdauer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Weißer_Lotus_Desktop_Software"
-        mc:Ignorable="d"
-        Title="Amortisationsdauer" Height="450" Width="800"
-        Icon="Images/Weißer_Lotus_Logo.ico"
-        Background="Black" Foreground="White"
-        WindowStyle="None" AllowsTransparency="True">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Border Background="Black" MouseLeftButtonDown="Border_MouseLeftButtonDown" BorderBrush="White" BorderThickness="1">
-            <DockPanel LastChildFill="False">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="Images/Weißer_Lotus_Logo.ico" Width="45" Height="34" RenderTransformOrigin="0.472,1.115"/>
-                    <TextBlock Text="Weißer Lotus" Foreground="White" Padding="7" Width="108"/>
+        mc:Ignorable="d"  
+        Background="Black" Foreground="White" Height="361" Width="586">
 
-                    <Button Content="Startseite" Click="OpenHomePageButton_Click" Background="Black" Foreground="White" BorderBrush="White" BorderThickness="1"/>
-                    <Button Content="Stock Price List" Click="OpenStockFormButton_Click" Background="Black" Foreground="White" BorderBrush="White" BorderThickness="1"/>
-                    <Button Content="Amortisationsdauer" Click="OpenAmortisationWindowButton_Click" Background="Black" Foreground="White" BorderBrush="White" BorderThickness="1"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                    <Button Content="_" Width="30" Click="MinimizeButton_Click" Background="Black" Foreground="White"/>
-                    <Button Content="□" Width="30" Click="MaximizeButton_Click" Background="Black" Foreground="White"/>
-                    <Button Content="X" Width="30" Click="CloseButton_Click" Background="Black" Foreground="White"/>
-                </StackPanel>
-            </DockPanel>
-        </Border>
+    <Grid>
         <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel Margin="0,-24,0,24">
 
@@ -51,4 +28,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
+</Page>
