--- a/Weißer Lotus Desktop Software/StockForm.xaml
+++ b/Weißer Lotus Desktop Software/StockForm.xaml
@@ -54,6 +54,6 @@
 
             <Button Grid.Row="4" Grid.Column="1" Content="Submit" Click="SubmitButton_Click"/>
         </Grid>
-  
+        <Frame x:Name="AmortisationsFenster" />
     </Grid>
 </Window>
